# factories_injector

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: built-test.yml  code-coverage.yml
example/: main.cpp  obj.hpp  real_obj.hpp  test_obj.hpp
src/: factory_injector.hpp  factory_traits.hpp  not_copyable_movable.hpp
test/: ut_main.cpp  ut_utils.hpp
tests/: ut_factory_injector.cpp
